--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -101,6 +101,8 @@ h4{
 {
     height: 600px;
     width: 800px;
+    background-color: #f2f2f2;
+    border: 1px solid lightgrey;
     /*position: absolute;*/
     /*display:block;*/
     /*margin: 5px 0;*/
@@ -109,6 +111,8 @@ h4{
 .maxmapsis {
     width: 100%;
     height: 100%;
+    background-color: #f2f2f2;
+    border: 1px solid lightgrey;
 }
 .header {
     position: fixed;
