--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -125,7 +125,28 @@ h4{
     box-shadow: #a2a2a2 2px 3px  5px;
     display: flex;
 }
-.footer-motu {
+.sidebar_motu {
+    position: fixed;
+    /*overflow: hidden;*/
+    transform: translateX(-80%);
+    left: 0;
+    top: 0;
+    height: 100%;
+    border-right: solid #757575 1px;
+    text-align: left;
+    color:#fff;
+    box-shadow: #a2a2a2 2px 3px  5px;
+    padding:6px;
+    display: flex;
+    transition: transform 0.6s;
+}
+
+.sidebar_motu:hover {
+    transform:translateX(0);
+    /*height:auto;*/
+}
+
+.footer_motu {
     position: fixed;
     /*overflow: hidden;*/
     left: 0;
@@ -139,14 +160,14 @@ h4{
     transition: transform 0.6s;
 }
 
-.footer-motu h2, .footer-motu h2{
+.footer_motu h2, .footer_motu h2{
     margin: 0 auto;
     padding: 10px 0;
     text-align: center;
     text-transform: uppercase;
     text-shadow: #a2a2a2 2px 2px;
 }
-.footer-motu a, .footer-motu a {
+.footer_motu a, .footer_motu a {
     display: block;
     color: #727272;
     text-align: center;
@@ -154,7 +175,7 @@ h4{
     text-decoration: none;
     font-size: 17px;
 }
-.footer-motu:hover {
+.footer_motu:hover {
     transform:translateY(0);
     /*height:auto;*/
 }
@@ -270,7 +291,23 @@ tr.odd:hover, tr.even:hover{
     font-weight: bold;
     vertical-align: bottom;
     display: flex;
+    flex-direction: column;
 }
+#myTopnav div div {
+    position: relative;
+    top:0;
+    box-sizing: border-box;
+    width:100%;
+}
+#myTopnav div div:first-child {
+    height:85%;
+    opacity: .8;
+    border-radius: 5px;
+}
+
+#myTopnav div div:last-child {
+    height:15%;
+ }
 #myTopnav div span{
     align-self: flex-end;
 }
@@ -281,21 +318,33 @@ tr.odd:hover, tr.even:hover{
     background-color: #4CAF50;
     left:10px;
 }
-
+#visited div:first-child {
+    background-color: #00e765;
+}
 #selected {
     background-color: #2196F3;
     left:220px;
+}
+#selected div:first-child {
+    background-color: #00c0ef;
 }
 
 #filters {
     background-color: #f44336;
     left:430px;
 }
+#filters div:first-child {
+    background-color: #e47365;
+}
 
 #categories {
     background-color: #555;
     left:640px;
 }
+#categories div:first-child {
+    background-color: #95999c;
+}
+
 .gallery {
     background: #EEE;
 }
@@ -316,4 +365,10 @@ tr.odd:hover, tr.even:hover{
     line-height: 200px;
     font-size: 80px;
     color: white;
+}
+div.balloon{
+    background-color: #7adddd;
+}
+div.balloon img{
+    height:80px;
 }
