--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -372,3 +372,40 @@ div.balloon{
 div.balloon img{
     height:80px;
 }
+
+#title_center{
+    position: absolute;
+    width: 310px;
+    height: 50px;
+    left: 40%;
+    top: 34px;
+}
+#title_right{
+    position: absolute;
+    width: 158px;
+    height: 50px;
+    right: 10%;
+    top: 34px;
+}
+#tc_title{
+    position: relative;
+    padding: 15px;
+    width: 75%;
+    height:100%;
+    border-right: 2px solid #F3F5F8;
+}
+.map_notes{
+    background: #FFFFFF;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.16);
+    border-radius: 30px;
+    /*font-family: Helvetica Neue;*/
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+}
+#sidebar{
+    top:34px;
+    height:95%;
+    margin-left: 10px;
+}
