--- a/frontend/web/css/animation.css
+++ b/frontend/web/css/animation.css
@@ -33,10 +33,29 @@
         transform: translateX(-80%);
     }
 }
+@keyframes slideInLeftOpen {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(-200%);
+        -ms-transform: translateX(-200%);
+        transform: translateX(-200%);
+    }
+
+    100% {
+        -webkit-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        transform: translateX(0%);
+    }
+}
 
 .slideInLeft {
     -webkit-animation-name: slideInLeft;
     animation-name: slideInLeft;
+    animation-duration: 3s;
+}
+.slideInLeftOpen {
+    -webkit-animation-name: slideInLeftOpen;
+    animation-name: slideInLeftOpen;
     animation-duration: 3s;
 }
 
