--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -572,3 +572,55 @@ div.balloon img{
     position: relative;
     height: 100%;
 }
+.baloon{
+    width: 286px;
+    /*height: 113px;*/
+    background: #FFFFFF;
+    /*box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.16);*/
+    /*border-radius: 20px;*/
+    display:flex;
+    justify-content: space-around;
+}
+.baloon>div{
+    margin-right: 5px;
+}
+.baloon img {
+    border-radius: 50%;
+    height: 40px;
+}
+.baloon_percent{
+    border-radius: 50%;
+    background: #596AF8;
+    height:40px;
+    width:40px;
+    color:#fff;
+    /*font-family: Helvetica Neue;*/
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    padding-top: 12px;
+}
+.baloon_text{
+    display: flex;
+    margin-bottom: 5px;
+}
+.baloon_text div{
+    margin-right: 4px;
+}
+.baloon_green{
+    width: 10px;
+    height: 10px;
+    background: #76E800;
+    border-radius: 10px;
+    margin-top: 3px;
+}
+.baloon_note{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+   color: #72808A;
+    opacity: 0.9;
+}
