--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -484,11 +484,15 @@ div.balloon img{
     border-bottom: 2px solid #F3F5F8;
 }
 
-#sidebar_1_1{
+#sidebar_logo, #sidebar_back{
     width:50%;
 }
-#sidebar_1_1 img{
+#sidebar_logo img{
     width: 106px;
+}
+#sidebar_back{
+    display:none;
+    color:#72808A;
 }
 #sidebar_1_2{
     width:50%;
@@ -496,6 +500,25 @@ div.balloon img{
 }
 #sidebar_1_2 img{
     width: 40px;
+}
+#control_area{
+    /*display: flex;*/
+}
+.filter_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 300px;
+}
+.filter{
+    background: #FFFFFF;
+    border: 1px solid #FBBC04;
+    box-sizing: border-box;
+    border-radius: 15px;
+    color: #72808A;
+    padding: 3px 5px;
+    margin: 2px;
 }
 .sidebar_cat_button{
     padding: 30px 10px 20px;
