created page and models

--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -501,9 +501,13 @@ div.balloon img{
 #sidebar_1_2 img{
     width: 40px;
 }
-#control_area{
-    /*display: flex;*/
+
+#display_area{
+    height:100%;
+    position: relative;
+    display: contents;
 }
+
 .filter_container{
     display: flex;
     flex-direction: row;
@@ -572,6 +576,8 @@ div.balloon img{
 #recommend {
     display: flex;
     flex-direction: column;
+    position: relative;
+    height: 100%;
 }
 #recommend .label{
     /*font-family: Roboto;*/
@@ -658,4 +664,55 @@ div.balloon img{
     line-height: 14px;
    color: #72808A;
     opacity: 0.9;
+}
+#recommend_bage{
+    margin-top: 15px;
+}
+#selected_bage{
+    margin-top: 6px;
+}
+.notification {
+    position: relative;
+    display: inline-block;
+}
+.notification .badge {
+    position: absolute;
+    top: -7px;
+    right: -7px;
+    padding: 3px 6px;
+    border-radius: 50%;
+    background: #E22EFF;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    text-align: center;
+   color: #FFFFFF;
+    opacity: 0.8;
+}
+#selected_bage span.red{
+    background: #F22F2E;
+    top: 2px;
+    right: -2px;
+}
+.page_container{
+    display:flex;
+    flex-direction: column;
+    color: #0f0f0f;
+    max-width: 300px;
+    overflow: auto;
+}
+.page_container img{
+    width: 100%;
+}
+.page_container div.sidebar_row{
+    text-align: left;
+    justify-content: left;
+}
+.sidebar_title{
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+     color: #0B0B0B;
 }
